--- a/kusudama2/wrangler.jsonc
+++ b/kusudama2/wrangler.jsonc
@@ -12,7 +12,7 @@
 	},
 	"observability": {
 		"enabled": true
-	}
+	},
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
@@ -43,4 +43,10 @@
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
 	 */
 	// "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
+        "routes": [
+                {
+                        "pattern": "kusudama2.capslock.dev",
+                        "custom_domain": true
+                }
+        ]
 }
